media/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-svc
  namespace: media
spec:
  selector:
    app: audiobookshelf
  ports:
    - name: http
      port: 8080
      targetPort: 8080
